RESOLVED FIXED18115
REGRESSION (r31250): Incomplete repaint of GoogleReader sidebar while reading unread posts
https://bugs.webkit.org/show_bug.cgi?id=18115
Summary REGRESSION (r31250): Incomplete repaint of GoogleReader sidebar while reading...
Henk Poley
Reported 2008-03-26 11:08:34 PDT
In a Google Reader posts feed, go the next post by pressing spacebar. A small corruption will appear in the number of unread posts. Will attach a screenshot.
Attachments
Curruption of the number '1 'in "Apple (1)" in the sidebar (242.82 KB, image/png)
2008-03-26 11:09 PDT, Henk Poley
no flags
even more rendering problems with Google Reader (79.26 KB, image/png)
2008-03-28 14:53 PDT, Ismail Donmez
no flags
Patch for "even more rendering problems" (without log and test) (1.08 KB, patch)
2008-03-28 18:15 PDT, mitz
no flags
Patch (no repaint test or change log yet) (654 bytes, patch)
2008-03-28 22:26 PDT, mitz
no flags
Make repaintRectangle() account for layout delta (10.18 KB, patch)
2008-03-30 14:10 PDT, mitz
sam: review+
Henk Poley
Comment 1 2008-03-26 11:09:50 PDT
Created attachment 20088 [details] Curruption of the number '1 'in "Apple (1)" in the sidebar
Henk Poley
Comment 2 2008-03-26 11:13:31 PDT
"Maybe" I should have mentioned that this is using WebKit SVN r31318
Matt Lilek
Comment 3 2008-03-27 18:16:02 PDT
Confirmed with r31371. While spacing through the unread posts, the "All Items" unread count updates properly, as does the unread count for the feed (in the bar above the feed), but the count next to the feed in the feed list in the sidebar does not update at all - forcing a repaint updated it properly.
Ismail Donmez
Comment 4 2008-03-28 14:53:15 PDT
Created attachment 20166 [details] even more rendering problems with Google Reader
Ismail Donmez
Comment 5 2008-03-28 14:54:30 PDT
I am seeing a much worse regression with Google Reader which is introduced in last 24 hours, so it might be related to this breakage. See screenshot. "Mark all as read" , "Refresh" is misrendered.
mitz
Comment 6 2008-03-28 17:06:33 PDT
(In reply to comment #3) > Confirmed with r31371. Is this a regression?
Ismail Donmez
Comment 7 2008-03-28 17:18:15 PDT
In my case, yes its a regression introduced in last 24 hours.
mitz
Comment 8 2008-03-28 18:15:37 PDT
Created attachment 20177 [details] Patch for "even more rendering problems" (without log and test) The extra problems are a regression in r31389.
mitz
Comment 9 2008-03-28 20:08:59 PDT
Comment on attachment 20177 [details] Patch for "even more rendering problems" (without log and test) Landed this in r31426
mitz
Comment 10 2008-03-28 22:26:45 PDT
Created attachment 20184 [details] Patch (no repaint test or change log yet)
mitz
Comment 11 2008-03-30 14:10:36 PDT
Created attachment 20223 [details] Make repaintRectangle() account for layout delta
mitz
Comment 12 2008-03-30 14:55:27 PDT
Note You need to log in before you can comment on or make changes to this bug.