WebCore:

Reviewed by Sam Weinig.

        - fix http://bugs.webkit.org/show_bug.cgi?id=18115
          REGRESSION (r31250): Incomplete repaint of GoogleReader sidebar while reading unread posts

        Test: fast/repaint/lines-with-layout-delta.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::repaintRectangle): Made this method take layout
        delta into account.

LayoutTests:

        Reviewed by Sam Weinig.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=18115
          REGRESSION (r31250): Incomplete repaint of GoogleReader sidebar while reading unread posts

        * fast/repaint/lines-with-layout-delta.html: Added.
        * platform/mac/fast/repaint/lines-with-layout-delta-expected.checksum: Added.
        * platform/mac/fast/repaint/lines-with-layout-delta-expected.png: Added.
        * platform/mac/fast/repaint/lines-with-layout-delta-expected.txt: Added.



Canonical link: https://commits.webkit.org/25088@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31446 268f45cc-cd09-0410-ab3c-d52691b4dbfc