WebCore/rendering/RenderObject.cpp
@@ -1790,6 +1790,7 @@ void RenderObject::repaintRectangle(const IntRect& r, bool immediate)
     if (view->printing())
         return; // Don't repaint if we're printing.
     IntRect absRect(r);
+    absRect.move(view->layoutDelta());
     computeAbsoluteRepaintRect(absRect);
     view->repaintViewRectangle(absRect, immediate);
 }
